fix: Adjust layout and spacing for header and sections in CSS

--- a/style.css
+++ b/style.css
@@ -35,18 +35,19 @@ video {
   height: auto;
 }
 
-section,
-header {
-  max-width: 1314px;
-  padding: 0 49px;
-  margin-inline: auto;
-}
-
 @media screen and (min-width: 769px) {
   section,
   header {
+    width: 100%;
     padding: 0 2px;
   }
+}
+
+section,
+header {
+  max-width: 1314px;
+  padding: 0 20px;
+  margin-inline: auto;
 }
 
 .case-study-section--title > p,
@@ -56,7 +57,7 @@ header {
 .pricing-section--title > p,
 .faq-section > p {
   font-weight: 700;
-  font-size: 2.5rem;
+  font-size: clamp(1.5rem, 5vw, 2.5rm);
   line-height: 100%;
   letter-spacing: 0%;
   text-align: center;
@@ -77,6 +78,16 @@ header {
   margin-bottom: 96px;
 }
 
+.case-study-section--title,
+.testimonial-section--title,
+.how-it-works-section--title,
+.benefits-section--title,
+.pricing-section--title,
+.founders-note-section,
+.faq-section--title {
+  margin-top: 164px;
+}
+
 @media screen and (min-width: 769px) {
   .case-study-section--title > h2,
   .testimonial-section--title > h2,
@@ -86,16 +97,6 @@ header {
   .faq-section > h2 {
     font-size: 4rem;
   }
-}
-
-.case-study-section--title,
-.testimonial-section--title,
-.how-it-works-section--title,
-.benefits-section--title,
-.pricing-section--title,
-.founders-note-section,
-.faq-section--title {
-  margin-top: 164px;
 }
 
 nav {
@@ -281,7 +282,7 @@ nav > ul > li > a:hover {
 .hero-section__text--title {
   margin-top: 133px;
   font-weight: 700;
-  font-size: clamp(4rem, 5vw, 4.625rem);
+  font-size: clamp(3.5rem, 5vw, 4.625rem);
   line-height: 103%;
   letter-spacing: 0%;
 }
@@ -424,14 +425,11 @@ nav > ul > li > a:hover {
   }
 
   .hero-section__social-proof--items {
-    flex-direction: column;
     gap: 16px;
   }
 }
 
 .hero-section__social-proof {
-  max-width: 1440px;
-  margin: 96px auto 0;
   text-align: center;
   overflow: hidden;
 }
@@ -600,7 +598,6 @@ nav > ul > li > a:hover {
 
 .works-section--right {
   max-width: 664px;
-  min-height: 1056px;
   display: flex;
   flex-direction: column;
   gap: 36px;
@@ -621,7 +618,7 @@ nav > ul > li > a:hover {
   letter-spacing: 0%;
 }
 
-@media screen and (max-width: 1024px)  {
+@media screen and (max-width: 1024px) {
   .works-section__item > span {
     font-size: 1.5rem;
   }
@@ -635,7 +632,7 @@ nav > ul > li > a:hover {
 }
 
 .case-study-study--container {
-  width: 98%;
+  width: 100%;
   border-radius: 48px;
   border: 1px solid #ffffff99;
   display: flex;
@@ -644,7 +641,6 @@ nav > ul > li > a:hover {
 }
 
 .case-study-study--wrapper {
-  max-width: 1293px;
   margin: 12px;
   border-radius: 40px;
   border: 1px solid #ffffff99;
@@ -659,13 +655,12 @@ nav > ul > li > a:hover {
 
 .separator {
   border: 1px solid #ffffff4d;
-
 }
 
 .case-study-study__details {
   padding: 35px 16px;
   width: 50%;
-    height: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 769px) {
@@ -674,13 +669,13 @@ nav > ul > li > a:hover {
   }
 
   .case-study-study--wrapper > img {
-  width: 100%;
-  height: 250px;
-}
+    width: 100%;
+    height: 250px;
+  }
 
-.case-study-study__details {
-  width: 95%;
-}
+  .case-study-study__details {
+    width: 95%;
+  }
 }
 
 .case-study-study__details > p {
@@ -705,6 +700,7 @@ nav > ul > li > a:hover {
 
 .case-study-study__details--tags {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 11px;
 }
@@ -712,13 +708,14 @@ nav > ul > li > a:hover {
 .case-study-study__details--tag {
   max-width: 121px;
   border-radius: 20px;
+  font-size: 0.725rem;
   padding: 10px 24px;
   background: #2d2d2d;
 }
 
 .show-more {
   cursor: pointer;
-  width: 268px;
+  max-width: 268px;
   margin: 0 auto;
   height: 80px;
   border-radius: 24px;
@@ -733,7 +730,7 @@ nav > ul > li > a:hover {
   );
 
   font-weight: 600;
-  font-size: 2rem;
+  font-size: clamp(1.3rem, 5vw, 2rem);
   line-height: 120%;
   letter-spacing: 0%;
   text-align: center;
@@ -955,17 +952,19 @@ nav > ul > li > a:hover {
 
 .benefits {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(424px, 1fr));
   gap: 30px;
 }
 
-.benefit-card {
-  max-width: 424px;
+@media screen and (max-width: 769px) {
+  .benefits {
+    grid-template-columns: 1fr;
+  }
 }
 
 .benefit-card > h3 {
   font-weight: 500;
-  font-size: 2.25rem;
+  font-size: clamp(1.5rem, 5vw, 2.2rem);
   line-height: 100%;
   letter-spacing: 0%;
   margin-top: 36px;
@@ -1003,7 +1002,7 @@ nav > ul > li > a:hover {
 
 @media screen and (max-width: 769px) {
   .testimonials {
-    grid-template-columns: repeat(1, minmax(410px, 1fr));
+    grid-template-columns: 1fr;
   }
 }
 
@@ -1084,12 +1083,11 @@ nav > ul > li > a:hover {
   display: flex;
   flex-direction: column;
   gap: 102px;
-  overflow-x: hidden;
 }
 
 .pricing > h2 {
   font-weight: 600;
-  font-size: 3rem;
+  font-size: clamp(2.5rem, 5vw, 3rem);
   line-height: 100%;
   letter-spacing: 0%;
   text-align: center;
@@ -1113,6 +1111,12 @@ nav > ul > li > a:hover {
   /* place-items: center; */
   gap: 24px;
   overflow: hidden;
+}
+
+@media screen and (max-width: 769px) {
+  .pricing--cards {
+    overflow: auto;
+  }
 }
 
 .pricing__card {
@@ -1370,7 +1374,6 @@ nav > ul > li > a:hover {
   display: flex;
   gap: 20px;
   list-style: none;
-  padding: 16px;
   border-radius: 12px;
   background-color: transparent;
   align-items: flex-start;
@@ -1431,6 +1434,13 @@ nav > ul > li > a:hover {
   position: relative;
 }
 
+@media screen and (max-width: 769px) {
+  .rounded-wrapper {
+    width: 40px;
+    height: 40px;
+  }
+}
+
 .rounded-inner {
   width: calc(100% - 4px);
   height: calc(100% - 4px);
@@ -1483,8 +1493,10 @@ details[open] .plus > img {
   justify-content: center;
 }
 .faq-section--button {
-  margin: 0 auto !important;
+  margin: 10px auto 0px !important;
+  font-size: clamp(.5rem, 5vw, 2rem);
   display: inline-block;
+  width: 100%;
 }
 
 /* footer */
